manifests/nodeport_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 2345
      targetPort: 3001
