manifests/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: log-output-svc
#   namespace: app-exercises
# spec:
#   type: ClusterIP
#   selector:
#     app: log-output
#   ports:
#     - name: log-output-port
#       port: 3002
#       protocol: TCP
#       targetPort: 3002  # Map to the new port 3002 for log-output
#     # - name: pingpong-port
#     #   port: 3001
#     #   protocol: TCP
#     #   targetPort: 3001  # Map to the new port 3001 for pingpong

#for GKE deploy
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  # namespace: app-exercises
spec:
  type: LoadBalancer  # Change from ClusterIP to LoadBalancer
  selector:
    app: log-output
  ports:
    - name: log-output-port
      port: 3002
      protocol: TCP
      targetPort: 3002
