manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: app-route
spec:
  parentRefs:
    # - name: my-gateway # Old GKE gateway
    - name: my-local-gateway # K3d local gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
      backendRefs:
        - name: pingpong-svc
          port: 3001
    - matches:
        - path:
            type: PathPrefix
            value: /log-output
      backendRefs:
        - name: log-output-svc
          port: 3002
