manifests/svc-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  # namespace: app-exercises
  annotations:
    spec.ingressClassName: nginx  # Use GCE Ingress
spec:
  rules:
    - http:
        paths:
          - path: /log-output
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 3002
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 3001
### Apply this together for the GKE part. Ing + Nodeport
---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - port: 3002
      protocol: TCP
      targetPort: 3002
---
# (Do not apply this file when using Gateway API)
